# Sip_Sip_Cactus

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  requirments_cloud.txt
.devcontainer/: devcontainer.json
env/: env.example
examples/: chatbot_flow.py  check_db.py  telegram_bot_example.py  telegram_vibe.py
plant_health_tracker/: board_test.py  cloud_sensor.py  importing_data.py  plant_ai_bot.py  soil_sensor.py  streamlit_vis.py  telegram_bot.py
plant_health_tracker/config/: __init__.py  base.py
plant_health_tracker/db/: database.py  init_db.py
plant_health_tracker/db/setup/: create_user.sql  init_db.py
plant_health_tracker/mock/: __init__.py  data.py  plant_data.py  sensor_data.py
plant_health_tracker/models/: __init__.py  base.py  plant.py  sensor_data.py
plant_health_tracker/utils/: __init__.py  moisture_evaluation.py  telegram.py
tools/: telegram_get_chat_id.py
