[tool.poetry]
name = "plant-health-tracker"
version = "0.1.0"
description = ""
authors = ["martina.roithmeier <maroithmeier@gmail.com>", "vitezslav.slavik <vitezslavik@gmail.com>"]
readme = "README.md"
packages = [{ include = "plant_health_tracker" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pandas = "^2.2.3"
sqlalchemy = "^2.0.40"
flask = "^3.1.0"
openai = "^1.76.0"
aiohttp = {extras = ["speedups"], version = "^3.11.18"}
python-dotenv = "^1.1.0"
langchain = "^0.3.25"
langchain-openai = "^0.3.16"
python-telegram-bot = "^22.0"
psycopg2 = "^2.9.10"
psycopg2-binary = "^2.9.10"
nest-asyncio = "^1.6.0"
streamlit = "^1.45.1"
plotly = "^6.1.2"
numpy = "^2.2.6"
matplotlib = "^3.10.3"
adafruit-seesaw = "^1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"